# nx_open_integrations

./: .hgignore  readme.md
Cloud Service Checker/: CloudServiceChecker.py  README.md
authentication/: cloud_bearer.py  cloud_digest.py  local_bearer.py  local_digest.py  url_digest.py
conan_profiles/: _nx_submodule
cpp/vms_server_plugins/common/: initial_config.cmake
cpp/vms_server_plugins/opencv_object_detection_analytics_plugin/: readme.md
cpp/vms_server_plugins/opencv_object_detection_analytics_plugin/conan-opencv/: conanfile.py  readme.md
cpp/vms_server_plugins/opencv_object_detection_analytics_plugin/step1/: CMakeLists.txt
cpp/vms_server_plugins/opencv_object_detection_analytics_plugin/step2/: CMakeLists.txt
cpp/vms_server_plugins/opencv_object_detection_analytics_plugin/step3/: CMakeLists.txt
cpp/vms_server_plugins/opencv_object_detection_analytics_plugin/step4/: CMakeLists.txt
cpp/vms_server_plugins/opencv_object_detection_analytics_plugin/step5/: CMakeLists.txt
cpp/vms_server_plugins/opencv_object_detection_analytics_plugin/step5/src/sample_company/vms_server_plugins/opencv_object_detection/: detection.cpp  detection.h  device_agent.cpp  device_agent.h  engine.cpp  event.h  exceptions.h  geometry.h  object_detector.cpp  object_tracker.cpp  object_tracker.h  object_tracker_utils.cpp  object_tracker_utils.h
cpp/vms_server_plugins/openvino_object_detection_analytics_plugin/: CMakeLists.txt  notice.md  readme.md
cpp/vms_server_plugins/openvino_object_detection_analytics_plugin/src/app/: app.cpp  app.h  main.cpp
cpp/vms_server_plugins/openvino_object_detection_analytics_plugin/src/lib/: best_shot.h  config.h  detection.h  event.h  exceptions.h  frame.h  geometry.h  network.cpp  network.h  object_detection_processor.cpp  object_detection_processor.h  object_detector.cpp  object_detector.h  object_tracker_utils.cpp  object_tracker_utils.h  openvino_log_utils.cpp  openvino_log_utils.h  openvino_object_detection_analytics_plugin_ini.h  person_re_id.cpp  person_re_id.h  person_tracker.cpp  person_tracker.h  roi_processor.cpp  roi_processor.h  settings.h  status.h  track.cpp  track.h  utils.cpp  utils.h
cpp/vms_server_plugins/openvino_object_detection_analytics_plugin/src/opencv_tbm/: tracking_by_matching.cpp
cpp/vms_server_plugins/openvino_object_detection_analytics_plugin/src/plugin/: device_agent.cpp  device_agent.h  engine.cpp  engine.h
dashboard/: .terserrc  constants.ts  index.html  loader.css  package.json  readme.md  styles.css
docker/: .env  Dockerfile  build.sh  docker-compose.yaml  entrypoint.sh  manage.sh  readme.md
docker/config-volumes/entrypoint.d/: 10-example.sh  20-example.py  readme.txt
docker/config-volumes/etc/: mediaserver.conf  readme.txt
docker/config-volumes/nx_ini/: nx_vms_server.ini  readme.txt
docker/config-volumes/recordings/: readme.txt
docker/config-volumes/tmp/: readme.txt
docker/config-volumes/var/: readme.txt
http_proxy_with_feedback/: .gitignore  build.md  http_proxy_with_feedback.conf
javascript/js_api_examples/dashboard/: .gitignore  readme.md
javascript/js_api_examples/dashboard/src/: package.json
javascript/js_api_examples/resources/: .gitignore  readme.md
javascript/js_api_examples/resources/src/: compiled_client_api_test_page.html  helpers.ts  index.html  index.ts  initHandlers.ts  package.json  single_output.html
javascript/node_js/: package.json
javascript/node_js/examples/: genericEventShowNotification.ts  makeRuleForAllCameras.ts
javascript/node_js/examples/examplePage/: index.html
javascript/node_js/src/: config.ts  index.ts  mediaserverApi.ts  nodeServer.ts
javascript/node_js/src/data/: index.ts
javascript/web_integrations_examples/oauth_demo/: package.json
javascript/web_integrations_examples/parse_transaction_bus/: parse_transaction_bus.html
js_api_example/: compiled_client_api_test_page.html  controllers.ts  helpers.ts  index.html  index.ts  initHandlers.ts  prepare_portal.sh  readme.md  screenshot.ts  styles.css  typesFromDesktopClient.d.ts
node_js/: .gitignore  .hgignore  notice.md  readme.md
node_js/examples/: generic_event_show_notification.ts  makeRuleForAllCameras.ts  nodeConfig.json  serveStatic.ts  softTriggerHttpAction.ts  soft_trigger_http_action.ts
node_js/examples/webpage_button/: config.ts  index.ts  main.ts
node_js/src/: config.ts  index.ts  logConfig.ts  mediaserverApi.ts  nodeServer.ts  system.ts
node_js/src/data/: index.ts
node_js/src/management/: eventRuleManager.ts  index.ts  runtimeConfigManager.ts  webPageManager.ts
python/examples/: add_camera_digest.py  generic_event.py  import_to_virtual_camera.py  readme.md  set_camera_to_tile.py  setup_rule_schedule.py  system_restore_bearer.py
python/examples/authentication/: cloud_bearer.py  http_basic_auth_fallback.py  local_bearer.py  local_digest.py  readme.md  url_digest.py
python/examples/common/: server_api.py
python/examples/configure_system_via_api/: cloud_hosts.json  configure_system.py  configure_systems.py  format_output.py  readme.md  system.py  system_setting.conf  system_settings.conf  systems.csv  vms_system.py
python/examples/connect_system_to_cloud/: connect_systems_to_cloud.py  readme.md  system.py  systems.csv
python/examples/operate_ptz_via_mediaserver_api/: camera.py  execute_ptz_operations.py  readme.md
python/examples/python_script_to_update_ the_system/: readme.md
python/examples/system_backup_and_restore/: readme.md  system_backup_bearer.py  system_backup_digest.py  system_restore_bearer.py  system_restore_digest.py
python/http_proxy_with_feedback/: http_proxy_with_feedback.py  readme.md
python_examples/: vms_4.2_backup.py  vms_4.2_restore.py  vms_5.0_backup.py  vms_5.0_restore.py
web_integrations_examples/: video_js_example.html
web_integrations_examples/2-way_audio_api/: 2-way_audio_html_example.html  readme.md
web_integrations_examples/embedding_video_on_a_website/: embedded_video_example.html  readme.md
web_integrations_examples/oauth_demo/: index.html  readme.md
web_integrations_examples/parse_transaction_bus/: readme.md
(+64 files in other folders)
